<resources>
    <string name="app_name">Хронос</string>
    <string name="widget_wide_name">Хронос с часами</string>
    <string name="widget_narrow_name">Хронос без часов</string>
    <string name="rate_our_app_title">Ваша оценка приложения</string>
    <string name="rate_our_app_text">Если Вас не затруднит, поставьте, пожалуйста, оценку нашему приложению на Google play.</string>
    <string name="rate_our_app_confirm_button">Оценить</string>
    <string name="rate_our_app_later_button">Напомнить позже</string>
    <string name="rate_our_app_cancel_button">Отказаться</string>
    <string name="calendar_help_button_text">\?</string>
    <string name="calendar_help_title_text">Условные обозначения</string>
    <string name="calendar_help_holidays_type1">- Нерабочие праздничные дни в России.</string>
    <string name="calendar_help_holidays_type2">- Рабочие праздничные дни — праздники, не являющиеся дополнительными выходными, но в которые проводятся торжественные мероприятия.</string>
    <string name="calendar_help_holidays_type3">- Профессиональные праздники.</string>
    <string name="calendar_help_holidays_type456">- Дни воинской славы (победные дни), памятные даты России, а так же дни памяти и скорби</string>
    <string name="calendar_help_holidays_type7">- Остальные неофициальные праздники.</string>
    <string name="calendar_help_holidays_type8">- Православные праздники.</string>
    <string name="calendar_help_reminders">- В этот день есть напоминания.</string>
    <string name="return_button_text">Назад</string>
    <string name="calendar_legend_selectet_day">- Выбраный день.</string>
    <string name="calendar_legend_current_day">- Сегодняшний день.</string>
    <string name="widget_no_location_message">Координаты неизвестны</string>
    <string name="widget_default_sun">Восход &#8211;&#8211;:&#8211;&#8211;</string>
    <string name="widget_text_sun_rise">Восход:</string>
    <string name="widget_text_sun_set">Заход:</string>
    <string name="widget_text_sun_polar_night">Полярная ночь</string>
    <string name="widget_text_sun_polar_day">Полярный день</string>
    <string name="widget_text_moon_visibility">Диск:</string>
    <string name="widget_moon">Восход:</string>
    <string name="widget_default_moon">Диск: &#8211;&#8211;.&#8211;%:</string>
    <string name="widget_start_screen_text">Загрузка&#8230;</string>
    <string name="reminders_list_no_reminders">Нет напоминаний</string>
	<string name="menu_insert_reminder">Добавить напоминание</string>
	<string name="menu_delete_all_reminders">Удалить все напоминания</string>
	<string name="menu_delete_today_reminders">Удалить все напоминания за этот день</string>
	<string name="menu_delete_reminders">Удаление заметок</string>
	<string name="menu_show_all_reminders">Показать все напоминания</string>
	<string name="menu_show_today_reminders">Показать напоминания для этого дня</string>
	<string name="menu_settings">Настройки</string>
	<string name="menu_delete_reminder">Удалить</string>
	<string name="menu_info">Координаты</string>
	<string name="confirm_dialog_delete_all_reminders_message">Вы уверены, что хотите удалить все напоминания?</string>
	<string name="confirm_dialog_delete_today_reminders_message">Вы уверены, что хотите удалить все напоминания за этот день?</string>
	<string name="confirm_dialog_reminders_title">Подтверждение удаления</string>
	<string name="confirm_dialog_positive_button_text">Да</string>
	<string name="confirm_dialog_negative_button_text">Нет</string>
	<string name="confirm_dialog_positive_button_text2">Подтвердить</string>
	<string name="confirm_dialog_negative_button_text2">Отмена</string>
	<string name="reminders_presentation_all_text">Показаны все напоминания</string>
	<string name="reminders_presentation_today_text">Показаны напоминания только для этого дня</string>
	<string name="title">Название</string>
    <string name="body">Описание</string>
    <string name="date">Дата:</string>
    <string name="time">Время:</string>
    <string name="date_and_time">Дата и время:</string>
    <string name="save">Сохранить</string>
    <string name="set_date">Выбрать дату и время</string>
    <string name="set_curent_time_edit_reminder">Установить текущее время</string>
    <string name="advertising">Место для рекламы</string>
    <string name="holidays_type1">Нерабочие праздничные дни</string>
    <string name="holidays_type2">Рабочие праздничные дни</string>
    <string name="holidays_type3">Профессиональные праздники</string>
    <string name="holidays_type4">Дни воинской славы (победные дни)</string>
    <string name="holidays_type5">Памятные даты России</string>
    <string name="holidays_type6">Дни памяти</string>
    <string name="holidays_type7">Остальные неофициальные праздники</string>
    <string name="holidays_type8">Православные праздники</string>
    <string name="have_holidays_today_title_text">Праздники в этот день:</string>
    <string name="no_holidays_today_title_text">В этот день нет праздников</string>
    <string name="history_title_text">В этот день случилось:</string>
    <string name="date_divider">.</string>
    <string name="time_divider">:</string>
    <string name="sun_astro_title">Астрономическая информация</string>
    <string name="moon_astro_title">Астрономическая информация</string>
    <string name="astro_sun_under_horizon">Положение: Солнце за горизонтом</string>
    <string name="astro_sun_above_horizon">Положение: Солнце над горизонтом</string>
    <string name="astro_moon_under_horizon">Положение: Луна за горизонтом</string>
    <string name="astro_moon_above_horizon">Положение: Луна над горизонтом</string>
    <string name="astro_sun_rise_time">Восход Солнца:</string>
    <string name="astro_no_sun_rise">В этот день восхода Солнца нет</string>
    <string name="astro_sun_transit_time">Зенит Солнца:</string>
    <string name="astro_sun_no_transit">В этот день зенита Солнца нет</string>
    <string name="astro_sun_set_time">Заход Солнца:</string>
    <string name="astro_no_sun_set">В этот день захода Солнца нет</string>
    <string name="astro_sun_height">Высота Солнца над горизонтом:</string>
    <string name="astro_sun_azimuth">Азимут Солнца от юга:</string>
    <string name="astro_sun_max_height">Максимальная высота Солнца:</string>
    <string name="astro_no_sun_max_height">Максимальная высота Солнца для этого дня неопределена</string>
    <string name="astro_day_lenth">Долгота светового дня:</string>
    <string name="astro_no_day_lenth">Долгота светового дня неопределена</string>
    <string name="sun_facts_title">Интересный факт о Солнце</string>
    <string name="signs_title">Приметы о погоде</string>
    <string name="no_signs_text">На этот день примет нет.</string>
    <string name="astro_sun_title">Астрономические данные о Солнце</string>
    <string name="astro_moon_title">Астрономические данные о Луне</string>
    <string name="astro_moon_main_phases_title">Основные фазы луны в этом месяце:</string>
    <string name="astro_moon_rise_time">Восход Луны:</string>
    <string name="astro_moon_visibility">Видимость Луны:</string>
    <string name="astro_no_moon_rise">В этот день восхода Луны нет</string>
    <string name="astro_moon_transit_time">Зенит Луны:</string>
    <string name="astro_moon_no_transit">В этот день зенита Луны нет</string>
    <string name="astro_moon_set_time">Заход Луны:</string>
    <string name="astro_no_moon_set">В этот день захода Луны нет</string>
    <string name="astro_moon_height">Высота Луны над горизонтом:</string>
    <string name="astro_moon_azimuth">Азимут Луны от юга:</string>
    <string name="astro_moon_max_height">Максимальная высота Луны:</string>
    <string name="astro_no_moon_max_height">Максимальная высота Луны для этого дня неопределена</string>
    <string name="astro_moon_distance">Расстояние до Луны:</string>
    <string name="astro_moon_phase">Фаза Луны:</string>
    <string name="astro_moon_no_such_phase">Такой фазы нет в этом месяце</string>
    <string name="astro_moon_phase_new_moon">Новолуние:</string>
    <string name="astro_moon_phase_first_quarter">Первая четверть:</string>
    <string name="astro_moon_phase_full_moon">Полнолуние:</string>
    <string name="astro_moon_phase_last_quarter">Последняя четверть:</string>
    <string name="astro_moon_lenth">Время между восходом и заходом Луны в этот день:</string>
    <string name="astro_no_moon_lenth">Время между восходом и заходом Луны в этот день неопределено</string>
    <string name="moon_calendar_title"></string>
    <string name="moon_facts_title">Интересный факт о Луне</string>
    <string name="info_title">Информация</string>
    <string name="no_moon_calendar_text">На этот день календарь огородника ещё не создан.</string>
    <string name="no_available_coordinates">Идёт определение местоположения&#8230;</string>
    <string name="current_longitude">Текущая долгота:</string>
    <string name="current_latitude">Текущая широта:</string>
    <string name="current_location_time">Время получения координат:</string>
    <string name="current_location_accuracy">Точность:</string>
    <string name="current_location_provider_GPS">Провайдер координат: GPS</string>
    <string name="current_location_provider_network">Провайдер координат: мобильная сеть</string>
    <string name="current_location_auto">Координаты получены автоматически</string>
    <string name="current_location_manual">Координаты указаны вручную</string>
    <string name="current_time_zone">Выбраный часовой пояс:</string>
    <string name="hours">ч.</string>
    <string name="current_date">Сегодня</string>
    <string name="past_date">Прошлое</string>
    <string name="future_date">Будущее</string>
    <string name="update_coordinates_button_text">Получить координаты сейчас</string>
    <string name="preferences_is_first_start_key">is_first_start_key</string>
    <string name="preferences_longitude_key">longitude_key</string>
    <string name="preferences_latitude_key">latitude_key</string>
    <string name="preferences_category_geolocation_title">Местоположение</string>
    <string name="preferences_list_region_summary">Укажите регион, для которого Вы бы хотели знать положение Солнца и Луны.</string>
    <string name="preferences_list_region_key">key_geolocation_regions</string>
    <string name="preferences_list_region_title">Ваш регион:</string>
    <string name="preferences_list_region_dialog_title">Выберете Ваш регион:</string>
    <string name="preferences_list_city_summary">Укажите город, для которого Вы бы хотели знать положение Солнца и Луны.</string>
    <string name="preferences_list_city_key">key_geolocation_citys</string>
    <string name="preferences_list_city_title">Ваш город:</string>
    <string name="preferences_list_city_dialog_title">Выберете Ваш город:</string>
    <string name="preferences_auto_location_title">Через GPS или мобильную сеть</string>
    <string name="preferences_auto_location_summary">Выберите, если хотите, чтобы программа получала координаты автоматически по GPS или через Интернет</string>
    <string name="preferences_auto_location_key">key_auto_location</string>
    <string name="preferences_auto_location_freq_title">Частота обновления кординат</string>
    <string name="preferences_auto_location_freq_key">key_auto_location_freq</string>
    <string name="preferences_is_location_update_key">key_preferences_is_location_update</string>
    <string name="preferences_location_time_key">key_preferences_location_time</string>
    <string name="preferences_location_accuracy_key">key_preferences_location_accuracy</string>
    <string name="preferences_location_provider_key">key_preferences_location_provider</string>
    <string name="no_available_location_providers_dialog_title">Включение провайдеров координат</string>
    <string name="no_available_all_location_providers_dialog_message">Не включен ни один провайдер координат. Включить?</string>
    <string name="set_current_date_and_time_text">Установить текущее время</string>
</resources>