<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 	<TextView
 	    android:layout_width="291dp"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center_horizontal"
 	    android:text="@string/rate_our_app_text"
 	    android:textColor="@color/MainTextColor_mainWindow"
 	    android:textSize="16sp"
 	/>
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center">
	   	<Button
	   	    android:id="@+id/RateAppOkButton"
	   	    android:layout_width="80dp"
	   	    android:layout_height="55dp"
	   	    android:gravity="center"
	   	    android:layout_gravity="center"
	   	    android:text="@string/rate_our_app_confirm_button"
	   	 />
	   	 <Button
	   	    android:layout_marginLeft="3dp"
	   	    android:id="@+id/RateAppLaterButton"
	   	    android:layout_width="100dp"
	   	    android:layout_height="55dp"
	   	    android:gravity="center"
	   	    android:layout_gravity="center"
	   	    android:text="@string/rate_our_app_later_button"
	   	 />
	   	<Button
	   	    android:layout_marginLeft="3dp"
	   	    android:id="@+id/RateAppCancelButton"
	   	    android:layout_width="103dp"
	   	    android:layout_height="55dp"
	   	    android:gravity="center"
	   	    android:layout_gravity="center"
	   	    android:text="@string/rate_our_app_cancel_button"
	   	 />
	</LinearLayout>	
</LinearLayout>
