<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	   	android:layout_gravity="center">
		<Button
			android:id="@+id/ChangeTimeBt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
		/>
		<Button
			android:layout_marginLeft="3dp"
			android:id="@+id/SetCurrentDateTimeBt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/set_current_date_and_time_text"
			android:layout_gravity="center"
		/>
	</LinearLayout>
	<ru.mendeo.chronos.CalendarView
        android:id="@+id/calendar_view"
		android:layout_width="291dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
	/>	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center">
	   	<Button
	   	    android:id="@+id/setDateTimeDialogOkButton"
	   	    android:layout_width="121dp"
	   	    android:layout_height="wrap_content"
	   	    android:gravity="center"
	   	    android:text="@string/confirm_dialog_positive_button_text2"
	   	 />
	   	 <Button
	   	    android:layout_marginLeft="5dp"
	   	    android:id="@+id/setDateTimeDialogCancelButton"
	   	    android:layout_width="121dp"
	   	    android:layout_height="wrap_content"
	   	    android:gravity="center"
	   	    android:text="@string/confirm_dialog_negative_button_text2"
	   	 />
	   	<Button
	   	    android:layout_marginLeft="5dp"
	   	    android:id="@+id/calendarHelpButton"
	   	    android:layout_width="34dp"
	   	    android:layout_height="wrap_content"
	   	    android:gravity="center"
	   	    android:text="@string/calendar_help_button_text"
	   	 />
	</LinearLayout>		
</LinearLayout>
