<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center">
   <LinearLayout
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <!-- Разъяснение для цвета выбранного дня -->
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    tools:ignore="UseCompoundDrawables" >
		 	<ImageView
	        	android:layout_width="38dp"
	        	android:layout_height="21dp"
	        	android:background="@color/calendar_selected_day"
	        	android:layout_marginRight="7dp"
	        	tools:ignore="ContentDescription"
	    	/>
		 	<TextView
		 	    android:layout_width="wrap_content"
		 	    android:layout_height="wrap_content"
		 	    android:text="@string/calendar_legend_selectet_day"
		 	    android:textColor="@color/MainTextColor"
		 	/>
		</LinearLayout>
	    <!-- Разъяснение для цвета текущего дня -->
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
			android:layout_marginTop="3dp"
		    tools:ignore="UseCompoundDrawables" >
		 	<ImageView
	        	android:layout_width="38dp"
	        	android:layout_height="21dp"
	        	android:background="@drawable/calendar_grid_cell_current_day_background"
	        	android:layout_marginRight="7dp"
	        	tools:ignore="ContentDescription"
	    	/>
		 	<TextView
		 	    android:layout_width="wrap_content"
		 	    android:layout_height="wrap_content"
		 	    android:text="@string/calendar_legend_current_day"
		 	    android:textColor="@color/MainTextColor"
		 	/>
		</LinearLayout>
		<!-- Справка по праздникам -->	
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:id="@+id/holidaysHelpLL">
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginTop="3dp"
			    tools:ignore="UseCompoundDrawables" >
			 	<ImageView
		        	android:layout_width="38dp"
		        	android:layout_height="21dp"
		        	android:background="@color/holidays_type1"
		        	android:layout_marginRight="7dp"
		        	tools:ignore="ContentDescription"
		    	/>
			 	<TextView
			 	    android:layout_width="wrap_content"
			 	    android:layout_height="wrap_content"
			 	    android:text="@string/calendar_help_holidays_type1"
			 	    android:textColor="@color/MainTextColor"
			 	/>
			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginTop="3dp"
			    tools:ignore="UseCompoundDrawables" >
			 	<ImageView
		        	android:layout_width="38dp"
		        	android:layout_height="21dp"
		        	android:background="@color/holidays_type2"
		        	android:layout_marginRight="7dp"
		        	tools:ignore="ContentDescription"
		    	/>
			 	<TextView
			 	    android:layout_width="wrap_content"
			 	    android:layout_height="wrap_content"
			 	    android:text="@string/calendar_help_holidays_type2"
			 	    android:textColor="@color/MainTextColor"
			 	/>
			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginTop="3dp"
			    tools:ignore="UseCompoundDrawables" >
			 	<ImageView
		        	android:layout_width="38dp"
		        	android:layout_height="21dp"
		        	android:background="@color/holidays_type3"
		        	android:layout_marginRight="7dp"
		        	tools:ignore="ContentDescription"
		    	/>
			 	<TextView
			 	    android:layout_width="wrap_content"
			 	    android:layout_height="wrap_content"
			 	    android:text="@string/calendar_help_holidays_type3"
			 	    android:textColor="@color/MainTextColor"
			 	/>
			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginTop="3dp"
			    tools:ignore="UseCompoundDrawables" >
			 	<ImageView
		        	android:layout_width="38dp"
		        	android:layout_height="21dp"
		        	android:background="@color/holidays_type456"
		        	android:layout_marginRight="7dp"
		        	tools:ignore="ContentDescription"
		    	/>
			 	<TextView
			 	    android:layout_width="wrap_content"
			 	    android:layout_height="wrap_content"
			 	    android:text="@string/calendar_help_holidays_type456"
			 	    android:textColor="@color/MainTextColor"
			 	/>
			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginTop="3dp"
			    tools:ignore="UseCompoundDrawables" >
			 	<ImageView
		        	android:layout_width="38dp"
		        	android:layout_height="21dp"
		        	android:background="@color/holidays_type7"
		        	android:layout_marginRight="7dp"
		        	tools:ignore="ContentDescription"
		    	/>
			 	<TextView
			 	    android:layout_width="wrap_content"
			 	    android:layout_height="wrap_content"
			 	    android:text="@string/calendar_help_holidays_type7"
			 	    android:textColor="@color/MainTextColor"
			 	/>
			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginTop="3dp"
			    tools:ignore="UseCompoundDrawables" >
			 	<ImageView
		        	android:layout_width="38dp"
		        	android:layout_height="21dp"
		        	android:background="@color/holidays_type8"
		        	android:layout_marginRight="7dp"
		        	tools:ignore="ContentDescription"
		    	/>
			 	<TextView
			 	    android:layout_width="wrap_content"
			 	    android:layout_height="wrap_content"
			 	    android:text="@string/calendar_help_holidays_type8"
			 	    android:textColor="@color/MainTextColor"
			 	/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
			android:layout_marginTop="3dp"
			android:id="@+id/remindersHelpLL"
		    tools:ignore="UseCompoundDrawables" >
		 	<ImageView
		       	android:layout_width="38dp"
		       	android:layout_height="21dp"
		       	android:background="@color/calendar_reminder_days"
		       	android:layout_marginRight="7dp"
		       	tools:ignore="ContentDescription"
		   	/>
		 	<TextView
		 	    android:layout_width="wrap_content"
		 	    android:layout_height="wrap_content"
		 	    android:text="@string/calendar_help_reminders"
		 	    android:textColor="@color/MainTextColor"
		 	/>
		</LinearLayout>	
	</LinearLayout>
</ScrollView>