<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout    	
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="35dp"
		android:layout_alignParentTop="true">
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="40dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/MainTextColor"
				android:text="@string/date"				
			/>
			<Button
				android:id="@+id/reminder_edit_date"
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
			/>
			<ImageView
			    android:id="@+id/reminders_updateDateBt"
			    android:src="@drawable/update_button_state"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:layout_gravity="center"
			    android:clickable="true"
			    tools:ignore="ContentDescription"		    
			/>
		</LinearLayout>
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="40dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/MainTextColor"
				android:text="@string/time"
			/>
			<Button
				android:id="@+id/reminder_edit_time"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_marginLeft="23dp"
			/>
			<ImageView
			    android:id="@+id/reminders_updateTimeBt"
			    android:src="@drawable/update_button_state"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:layout_gravity="center"
			    android:clickable="true"
			    tools:ignore="ContentDescription"			        
			/>
		</LinearLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/title"
			android:textColor="@color/MainTextColor"			
		/> 
		<EditText
			android:id="@+id/reminder_edit_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:singleLine="true"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/body"
			android:textColor="@color/MainTextColor"
		/>
		<EditText
			android:id="@+id/reminder_edit_body"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:minLines="5"
			android:scrollbars="vertical"
			android:gravity="top"
			android:inputType="textMultiLine"
		/>
	</LinearLayout>
	<ImageView
		android:id="@+id/save_edit_reminder"
		android:layout_alignParentBottom="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/save_button_state"			
		android:layout_centerHorizontal="true"
		android:clickable="true"
		tools:ignore="ContentDescription"
	/>
</RelativeLayout>