<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textColor="@color/MainTitleColor"
	        android:text="@string/astro_moon_title"
	        android:textSize="@dimen/ActivityTitleSize"
	        android:textStyle="bold"
	        android:lineSpacingMultiplier="1"
	    />
	    <TextView
	        android:id="@+id/MATimeZoneText"
	        android:textSize="@dimen/ActivityTextSize"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/MainTextColor"
	        android:lineSpacingMultiplier="1"
	    />
		<TextView
			android:id="@+id/MACurTimeText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MAVisibleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MARiseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MATransitText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MASettingText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MALengthOfDayText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>	
		<TextView
			android:id="@+id/MAHeightText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MAAzimuthText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MATransitHeightText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>		
		<TextView
			android:id="@+id/MADistanceText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MAPhaseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
		    android:id="@+id/MAMainPhasesTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:text="@string/astro_moon_main_phases_title"
			android:gravity="center"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
		   	android:id="@+id/MANewMoonTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:text="@string/astro_moon_phase_new_moon"
			android:gravity="center"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MANewMoonText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
		    android:id="@+id/MAFirstQuarterTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:text="@string/astro_moon_phase_first_quarter"
			android:gravity="center"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MAFirstQuarterText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
		    android:id="@+id/MAFullMoonTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:text="@string/astro_moon_phase_full_moon"
			android:gravity="center"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MAFullMoonText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
		    android:id="@+id/MALastQuarterTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:text="@string/astro_moon_phase_last_quarter"
			android:gravity="center"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
		<TextView
			android:id="@+id/MALastQuarterText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/ActivityTextSize"
			android:textColor="@color/MainTextColor"
			android:lineSpacingMultiplier="1"
		/>
	</LinearLayout>
</ScrollView>